:bug: Fix gap on export section on sidebar

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/exports.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/exports.scss
@@ -22,6 +22,7 @@
 
 .element-set-content {
   @include sidebar.option-grid-structure;
+  gap: var(--sp-xs);
 }
 
 .multiple-exports {
